--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <h1 class="hero-title ms-3 mb-0">Hello </h1>
                                 </div>
 
-                                <h2 class="mb-4">Saya adalah Mahasiswa Informatika.</h2>
+                                <h2 class="mb-4">I am currently pursuing a Bachelor's degree in Informatics Engineering at Universitas Muhammadiyah Surabaya</h2>
                                 </div>
                         </div>
 
@@ -124,7 +124,7 @@
                 
                                 <h3 class="pt-2 mb-3">About me</h3>
 
-                                <p>Saya Achmad Maulana Rois. Saya sekarang sedang menempuh kuliah di Universitas Muhammadiyah Surabaya. Saya mengambil jurusan Informatika                  </div>
+                                <p>My name is Achmad Maulana Rois.I am currently pursuing a Bachelor's degree in Informatics Engineering at Universitas Muhammadiyah Surabaya An enthusiastic and academically driven Informatics Engineering undergraduate at Universitas Muhammadiyah Surabaya, with a solid foundation in core areas of computer science including data structures, databases, operating systems, web development, software engineering, computer networks, and machine learning. Passionate about leveraging machine learning to create intelligent, data-driven solutions that automate decision-making and generate actionable insights.                </div>
                         </div>
 
                     </div>
