--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <h1 class="hero-title ms-3 mb-0">Hello </h1>
                                 </div>
 
-                                <h2 class="mb-4">I am currently pursuing a Bachelor's degree in Informatics Engineering at Universitas Muhammadiyah Surabaya</h2>
+                                <h2 class="mb-4">I'm student , and i'm studying at UMSURABAYA.</h2>
                                 </div>
                         </div>
 
@@ -349,7 +349,7 @@
                                     <strong class="site-footer-title d-block mb-3">About</strong>
 
                                     <p class="mb-2">
-                                        Saya adalah Mahasiswa Informatika  </p>
+                                       I am currently pursuing a Bachelor's degree in Informatics Engineering at Universitas Muhammadiyah Surabaya  </p>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
